# diffusion-lab

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
diffusion_lab/: __init__.py  configs.py
diffusion_lab/models/: __init__.py  ddim.py  ddpm.py  edm.py  flow_matching.py  guidance.py  inverse.py  score_sde.py  vae.py
diffusion_lab/nn/: __init__.py  mlp.py  unet.py
diffusion_lab/schedulers/: __init__.py  schedules.py
diffusion_lab/training/: trainer.py
diffusion_lab/utils/: __init__.py  viz.py
notebooks/: 00_smoke_test.ipynb  01_vae_2d.ipynb  02_ddpm_ddim_2d.ipynb  03_score_sde_2d.ipynb  04_flow_matching_2d.ipynb  05_ddpm_mnist.ipynb  06_flow_matching_mnist.ipynb  07_score_sde_mnist.ipynb  08_inverse_problems.ipynb  09_guidance.ipynb  10_edm_unification.ipynb
tests/: test_shapes.py
