[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-lab"
version = "0.1.0"
description = "Modular implementations of VAE, DDPM, DDIM, Score SDE, and Flow Matching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "einops>=0.7",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
ode = ["torchdiffeq>=0.2.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["diffusion_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
